July_Ultra Raids and Go Fest.html

--- a/thin.html
+++ b/thin.html
@@ -96,6 +96,32 @@
                    </div>
                   <hr style="margin:25px;border-color: #555;">
                   <div class="text-left">
+                      <!-- Start Go Fest 2024 -->
+                     <div class="asset-section" data-type="special-events" data-year="2023">
+                        <h5><a class="page-anchor" id="gofest2024" href="#gofest2024">Meetup Event:</a> <span style="font-family:'texgyreadventorregular';">Go Fest 2024</span></h5>
+                        <p>
+                           Pokémon GO Fest 2024 stretches over June and July with 3 in person events and one global finale, the in-person events are held at Sendai (30 May - 2 Jun) , Madrid (14 Jun - 16 Jun) and New York City (5 Jul to 8 Jul). The finale is held over the weekend of the 13th and 14th of July and will be a Global event were trainers can battle the Ultra Beast with the shiny debuting for Buzzwole, Pheromosa, Xurkitree as well as a new beast to add to the dex in the form of Necrozma in it’s normal, Dusk Mane and Dawn Wings forms. If you are planning to host or attend a local event for Pokémon GO Fest 2024, we have some awesome art assets for you to use. You can download them from our website and use them to create posters, flyers, banners, stickers, or anything else you can think of. We would love to see how you use our assets, so please tag us on social media with #PokemonGOFest2023 and show us your creativity!
+                        </p>
+                        <div class="assetGroup">
+                           <div class="asset">
+                              <a href="https://drive.google.com/drive/folders/11MxegDymCr8fc-vXUT-vHXeqL5W6cuoP?usp=drive_link" target="_blank">
+                              <img alt="Hexagon Style Go Fest 2024 Badge" src="./assets/2024/Season13-TimelessTravels/2024-07-13-14-go-fest/Hexagon_GoFest2024.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
+                              </div>
+                              <label>Hex Badge</label>
+                              </a>
+                              <p>
+                                 Designed to seamlessly fill the void left by the Former Silph Road's asset team. Inside this folder you will also find alternate versions.
+                                <div class="credits">
+                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a>
+                                 </div>
+                              </p>
+                           </div>
+                        </div>
+                        <hr style="margin:25px;border-color: #555;">
+                     </div>
+                     <!-- End Go Fest 2024 -->
                      <!-- Start July Raid Hours -->
                      <div class="asset-section" data-type="raid-event" data-year="2024">
                         <h5><a class="page-anchor" id="Jul2024RaidHours" href="#Jul2024RaidHours">Raid Hour:</a> <span style="font-family:'texgyreadventorregular';">July Raid Hours </span></h5>
@@ -115,6 +141,141 @@
                                  Square design perfect for your Campfire Events for the raid hour taking place on the 3rd of July
                                  <div class="credits">
                                     Icon Design: <a href="https://www.instagram.com/Christina_Joss/">Christina_Joss</a>
+                                 </div>
+                              </p>
+                           </div>
+                             <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-07-08-raid-hour/2024-07-08-Guzzlord.jpg" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-07-08-raid-hour/2024-07-08-Guzzlord.jpg">
+                              <div class="asset-label">
+                                 <img src="./img/png.png" alt="PNG File Label">
+                              </div>
+                              <label>CDL Guzzlord Raid Hour Banner</label>
+                              </a>
+                              <p>
+                                 Published by the CDL Team for you to promote your communiy's participation in the Raid Hour on the 8th of July 2024.
+                                 <div class="credits">
+                                    <a href="https://discord.gg/dGPHjdKGZm" target="_blank">Community Day League team</a>
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-07-09-raid-hour/2024-07-09-Nihilego.jpg" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-07-09-raid-hour/2024-07-09-Nihilego.jpg">
+                              <div class="asset-label">
+                                 <img src="./img/png.png" alt="PNG File Label">
+                              </div>
+                              <label>CDL Nihilego Raid Hour Banner</label>
+                              </a>
+                              <p>
+                                 Published by the CDL Team for you to promote your communiy's participation in the Raid Hour on the 9th of July 2024.
+                                 <div class="credits">
+                                    <a href="https://discord.gg/dGPHjdKGZm" target="_blank">Community Day League team</a>
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-07-10-raid-hour/2024-07-10-Celesteela.png" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-07-10-raid-hour/2024-07-10-Celesteela.png">
+                              <div class="asset-label">
+                                 <img src="./img/png.png" alt="PNG File Label">
+                              </div>
+                              <label>CDL Celesteela Raid Hour Banner</label>
+                              </a>
+                              <p>
+                                 Published by the CDL Team for you to promote your communiy's participation in the Raid Hour on the 10th of July 2024.
+                                 <div class="credits">
+                                    <a href="https://discord.gg/dGPHjdKGZm" target="_blank">Community Day League team</a>
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-07-10-raid-hour/2024-07-10-Kartana.png" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-07-10-raid-hour/2024-07-10-Kartana.png">
+                              <div class="asset-label">
+                                 <img src="./img/png.png" alt="PNG File Label">
+                              </div>
+                              <label>CDL Kartana Raid Hour Banner</label>
+                              </a>
+                              <p>
+                                 Published by the CDL Team for you to promote your communiy's participation in the Raid Hour on the 10th of July 2024.
+                                 <div class="credits">
+                                    <a href="https://discord.gg/dGPHjdKGZm" target="_blank">Community Day League team</a>
+                                 </div>
+                              </p>
+                           </div>
+                              <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-07-11-raid-hour/2024-07-11-Blacephalon.png" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-07-11-raid-hour/2024-07-11-Blacephalon.png">
+                              <div class="asset-label">
+                                 <img src="./img/png.png" alt="PNG File Label">
+                              </div>
+                              <label>CDL Blacephalon Raid Hour Banner</label>
+                              </a>
+                              <p>
+                                 Published by the CDL Team for you to promote your communiy's participation in the Raid Hour on the 11th of July 2024.
+                                 <div class="credits">
+                                    <a href="https://discord.gg/dGPHjdKGZm" target="_blank">Community Day League team</a>
+                                 </div>
+                              </p>
+                           </div>
+                            <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-07-11-raid-hour/2024-07-11-Stakataka.png" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-07-11-raid-hour/2024-07-11-Stakataka.png">
+                              <div class="asset-label">
+                                 <img src="./img/png.png" alt="PNG File Label">
+                              </div>
+                              <label>CDL Stakataka Raid Hour Banner</label>
+                              </a>
+                              <p>
+                                 Published by the CDL Team for you to promote your communiy's participation in the Raid Hour on the 11th of July 2024.
+                                 <div class="credits">
+                                    <a href="https://discord.gg/dGPHjdKGZm" target="_blank">Community Day League team</a>
+                                 </div>
+                              </p>
+                           </div>
+                            <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-07-12-raid-hour/2024-07-12-Buzzwole.jpg" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-07-12-raid-hour/2024-07-12-Buzzwole.jpg">
+                              <div class="asset-label">
+                                 <img src="./img/png.png" alt="PNG File Label">
+                              </div>
+                              <label>CDL Buzzwole Raid Hour Banner</label>
+                              </a>
+                              <p>
+                                 Published by the CDL Team for you to promote your communiy's participation in the Raid Hour on the 12th of July 2024.
+                                 <div class="credits">
+                                    <a href="https://discord.gg/dGPHjdKGZm" target="_blank">Community Day League team</a>
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-07-12-raid-hour/2024-07-12-Pheremosa.jpg" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-07-12-raid-hour/2024-07-12-Pheremosa.jpg">
+                              <div class="asset-label">
+                                 <img src="./img/png.png" alt="PNG File Label">
+                              </div>
+                              <label>CDL Pheremosa Raid Hour Banner</label>
+                              </a>
+                              <p>
+                                 Published by the CDL Team for you to promote your communiy's participation in the Raid Hour on the 12th of July 2024.
+                                 <div class="credits">
+                                    <a href="https://discord.gg/dGPHjdKGZm" target="_blank">Community Day League team</a>
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-07-12-raid-hour/2024-07-12-Xurkitree.jpg" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-07-12-raid-hour/2024-07-12-Xurkitree.jpg">
+                              <div class="asset-label">
+                                 <img src="./img/png.png" alt="PNG File Label">
+                              </div>
+                              <label>CDL Xurkitree Raid Hour Banner</label>
+                              </a>
+                              <p>
+                                 Published by the CDL Team for you to promote your communiy's participation in the Raid Hour on the 12th of July 2024.
+                                 <div class="credits">
+                                    <a href="https://discord.gg/dGPHjdKGZm" target="_blank">Community Day League team</a>
                                  </div>
                               </p>
                            </div>
