Christina Updates.html
All updates other than Go Fest Activity Sheet.

--- a/thin.html
+++ b/thin.html
@@ -144,6 +144,81 @@
                                  </div>
                               </p>
                            </div>
+                               <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-07-08-raid-hour/Christina_GuzzlordRaidHour.jpg" target="_blank">
+                              <img  alt="alt" src="./assets/2024/Season13-TimelessTravels/2024-07-08-raid-hour/Christina_GuzzlordRaidHour.jpg">
+                              <div class="asset-label">
+                                 <img src="./img/jpg.png" alt="JPG File Label">
+                              </div>
+                              <label>Christina's Guzzlord Raid Hour Icon</label>
+                              </a>
+                              <p>
+                                 Square design perfect for your Campfire Events for the raid hour taking place on the 8th of July
+                                 <div class="credits">
+                                    Icon Design: <a href="https://www.instagram.com/Christina_Joss/">Christina_Joss</a>
+                                 </div>
+                              </p>
+                           </div>
+                              <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-07-09-raid-hour/Christina_NihilegoRaidHour.jpg" target="_blank">
+                              <img  alt="alt" src="./assets/2024/Season13-TimelessTravels/2024-07-09-raid-hour/Christina_NihilegoRaidHour.jpg">
+                              <div class="asset-label">
+                                 <img src="./img/jpg.png" alt="JPG File Label">
+                              </div>
+                              <label>Christina's Nihilego Raid Hour Icon</label>
+                              </a>
+                              <p>
+                                 Square design perfect for your Campfire Events for the raid hour taking place on the 9th of July
+                                 <div class="credits">
+                                    Icon Design: <a href="https://www.instagram.com/Christina_Joss/">Christina_Joss</a>
+                                 </div>
+                              </p>
+                           </div>
+                              <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-07-10-raid-hour/Christina_KartanaRaidHour.jpg" target="_blank">
+                              <img  alt="alt" src="./assets/2024/Season13-TimelessTravels/2024-07-10-raid-hour/Christina_KartanaRaidHour.jpg">
+                              <div class="asset-label">
+                                 <img src="./img/jpg.png" alt="JPG File Label">
+                              </div>
+                              <label>Christina's Kartana Raid Hour Icon</label>
+                              </a>
+                              <p>
+                                 Square design perfect for your Campfire Events for the raid hour taking place on the 10th of July
+                                 <div class="credits">
+                                    Icon Design: <a href="https://www.instagram.com/Christina_Joss/">Christina_Joss</a>
+                                 </div>
+                              </p>
+                           </div>
+                              <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-07-11-raid-hour/Christina_BlacephalonRaidHour.png" target="_blank">
+                              <img  alt="alt" src="./assets/2024/Season13-TimelessTravels/2024-07-11-raid-hour/Christina_BlacephalonRaidHour.png">
+                              <div class="asset-label">
+                                 <img src="./img/jpg.png" alt="JPG File Label">
+                              </div>
+                              <label>Christina's Blacephalon Raid Hour Icon</label>
+                              </a>
+                              <p>
+                                 Square design perfect for your Campfire Events for the raid hour taking place on the 11th of July
+                                 <div class="credits">
+                                    Icon Design: <a href="https://www.instagram.com/Christina_Joss/">Christina_Joss</a>
+                                 </div>
+                              </p>
+                           </div>
+                              <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-07-12-raid-hour/Christina_BuzzwoleRaidHour.png" target="_blank">
+                              <img  alt="alt" src="./assets/2024/Season13-TimelessTravels/2024-07-12-raid-hour/Christina_BuzzwoleRaidHour.png">
+                              <div class="asset-label">
+                                 <img src="./img/jpg.png" alt="JPG File Label">
+                              </div>
+                              <label>Christina's Buzzwole Raid Hour Icon</label>
+                              </a>
+                              <p>
+                                 Square design perfect for your Campfire Events for the raid hour taking place on the 12th of July
+                                 <div class="credits">
+                                    Icon Design: <a href="https://www.instagram.com/Christina_Joss/">Christina_Joss</a>
+                                 </div>
+                              </p>
+                           </div>
                              <div class="asset">
                               <a href="./assets/2024/Season13-TimelessTravels/2024-07-08-raid-hour/2024-07-08-Guzzlord.jpg" target="_blank">
                               <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-07-08-raid-hour/2024-07-08-Guzzlord.jpg">
@@ -302,6 +377,23 @@
                                  Square design perfect for your Campfire Events
                                  <div class="credits">
                                     Icon Design: <a href="https://www.instagram.com/Christina_Joss/">Christina_Joss</a>
+                                 </div>
+                              </p>
+                           </div>
+                        </div>
+                           <div class="assetGroup">
+                           <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-07-13-14-go-fest/Christina_Raid day Activity sheet.png" target="_blank">
+                              <img  alt=" " src="./assets/2024/Season13-TimelessTravels/2024-07-13-14-go-fest/Christina_Raid day Activity sheet.png">
+                              <div class="asset-label">
+                                 <img src="./img/jpg.png" alt="JPG File Label">
+                              </div>
+                              <label>Christina's Mega Rayquaza Elite Raid Activity Sheet</label>
+                              </a>
+                              <p>
+                                 Fun activity sheet to complete during the Mega Rayquaza Raid Day
+                                 <div class="credits">
+                                    Sheet Design: <a href="https://www.instagram.com/Christina_Joss/">Christina_Joss</a>
                                  </div>
                               </p>
                            </div>
