Go_Fest_Activity_Sheet.html

--- a/thin.html
+++ b/thin.html
@@ -118,6 +118,21 @@
                                  </div>
                               </p>
                            </div>
+                              <div class="asset">
+                              <a href="https://drive.google.com/drive/folders/1lLMa3gqu2wI5rjNCC0wQ01k2pbi-DVIq?usp=sharing" target="_blank">
+                              <img  alt=" " src="./assets/2024/Season13-TimelessTravels/2024-07-13-14-go-fest/Christina_GoFestActivitySheet1.jpg">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
+                              </div>
+                              <label>Christina's Go Fest Activity Sheets</label>
+                              </a>
+                              <p>
+                                 Fun activity sheet to complete during the Go Fest Weekend
+                                 <div class="credits">
+                                    Sheet Design: <a href="https://www.instagram.com/Christina_Joss/">Christina_Joss</a>
+                                 </div>
+                              </p>
+                           </div>
                         </div>
                         <hr style="margin:25px;border-color: #555;">
                      </div>
@@ -380,8 +395,6 @@
                                  </div>
                               </p>
                            </div>
-                        </div>
-                           <div class="assetGroup">
                            <div class="asset">
                               <a href="./assets/2024/Season13-TimelessTravels/2024-07-13-14-go-fest/Christina_Raid day Activity sheet.png" target="_blank">
                               <img  alt=" " src="./assets/2024/Season13-TimelessTravels/2024-07-13-14-go-fest/Christina_Raid day Activity sheet.png">
