Pokemon Gift.html
Move gifts to general and add mini version

--- a/thin.html
+++ b/thin.html
@@ -1599,21 +1599,6 @@
                                  </div>
                               </p>
                            </div>
-                           <div class="asset">
-                              <a href="https://drive.google.com/file/d/17vpBWQmbTsDdyqBq6ZRhdEeh5aCYeFYX/view?usp=drive_link" target="_blank">
-                              <img  alt="Photograph of a PokeStop Gift in Real Life" src="./assets/general/PokestopGift.png">
-                              <div class="asset-label">
-                                 <img src="./img/pdf.png" alt="PDF File Label">
-                              </div>
-                              <label>PokeStop Gift Box Printable</label>
-                              </a>
-                              <p>
-                                 3 Page PDF Based on the Go Fest from Home Printable gift box design, this was redesigned to be easier to assemble, and a more realisic size. Pair with a breadbag and ribbon for a perfect style! Find instructions <a href="https://drive.google.com/drive/folders/1p2I8paaER3I-Q3c5PySPeRYuam4TKzCA?usp=drive_link" target="_blank">here</a>
-                                 <div class="credits">
-                                    Designed by <a href="https://social.pogo.community/@forte">Forte</a>
-                                 </div>
-                              </p>
-                           </div>
                         </div>
                         <hr style="margin:25px;border-color: #555;">
                      </div>
@@ -2530,12 +2515,11 @@
                         <hr style="margin:25px;border-color: #555;">
                      </div>
                      <!-- End Axew Day -->
-                     <!-- Start Feedback Form Templates -->
+                     <!-- Start General Google Form -->
                      <div class="asset-section" data-type="general">
                         <h5><a class="page-anchor" href="#google-forms">General Asset:</a> <span style="font-family:'texgyreadventorregular';">Google Form Feedback Templates</span></h5>
                         <p>These are a collection of Google Forms templates that can help you gather information from your community. If you have any problems with trying to use these forms reach out to us in our <a href="https://discord.gg/FUa35xeYUn" target="_blank">Discord Server's</a> #help channel</p>
                         <div class="assetGroup">
-
                            <div class="asset">
                               <a href="https://docs.google.com/forms/d/1pOY4LgDfd0nBpiDqlUEnMKfy4nT1qOra4d4852zVfWA/copy" target="_blank">
                               <img src="./assets/general/cdayfeedbackform.png" alt="Screenshot of the form. Screenshot reads as follows: Community Day Feedback
@@ -2559,7 +2543,46 @@
                         </div>
                         <hr style="margin:25px;border-color: #555;">
                      </div>
-                     <!-- End Feedback Form Templates -->
+                     <!-- End General Google Form -->
+                     <!-- Start General Gift Templates -->
+                     <div class="asset-section" data-type="general">
+                        <h5><a class="page-anchor" href="#google-forms">General Asset:</a> <span style="font-family:'texgyreadventorregular';">PokeStop Gift Box Printable</span></h5>
+                        <p>These are easy to print and assemble Pokémon Gifts for you to use at your in person events, see below for the sizes available.. If you have any problems with trying to use these templates reach out to us in our <a href="https://discord.gg/FUa35xeYUn" target="_blank">Discord Server's</a> #help channel</p>
+                        <div class="assetGroup">
+                              <div class="asset">
+                              <a href="https://drive.google.com/file/d/17vpBWQmbTsDdyqBq6ZRhdEeh5aCYeFYX/view?usp=drive_link" target="_blank">
+                              <img  alt="Photograph of a PokeStop Gift in Real Life" src="./assets/general/PokestopGift.png">
+                              <div class="asset-label">
+                                 <img src="./img/pdf.png" alt="PDF File Label">
+                              </div>
+                              <label>PokeStop Gift Box Printable</label>
+                              </a>
+                              <p>
+                                 3 Page PDF Based on the Go Fest from Home Printable gift box design, this was redesigned to be easier to assemble, and a more realisic size. Pair with a breadbag and ribbon for a perfect style! Find instructions <a href="https://drive.google.com/drive/folders/1p2I8paaER3I-Q3c5PySPeRYuam4TKzCA?usp=drive_link" target="_blank">here</a>
+                                 <div class="credits">
+                                    Designed by <a href="https://social.pogo.community/@forte">Forte</a>
+                                 </div>
+                              </p>
+                           </div>
+                              <div class="asset">
+                              <a href="https://drive.google.com/file/d/1BdeJXyqfNQwQn8nR_Cq5fwsb9FABB9A1/view?usp=sharing" target="_blank">
+                              <img  alt="Photograph of a PokeStop Gift in Real Life" src="./assets/general/MiniGift.jpg">
+                              <div class="asset-label">
+                                 <img src="./img/pdf.png" alt="PDF File Label">
+                              </div>
+                              <label>Mini PokeStop Gift Box Printable</label>
+                              </a>
+                              <p>
+                                 Mini version of the Go Fest from Home Printable gift box design! </a>
+                                 <div class="credits">
+                                    Designed by <a href="https://social.pogo.community/@forte">Forte</a>
+                                 </div>
+                              </p>
+                           </div>
+                        </div>
+                        <hr style="margin:25px;border-color: #555;">
+                     </div>
+                     <!-- End General Gift Templates -->
                      <!-- Start keridel's Keychains -->
                      <div class="asset-section" data-type="external">
                         <h5><a class="page-anchor" href="#keridelteamkeychain">Asset Resource:</a> <span style="font-family:'texgyreadventorregular';"><a href="https://www.printables.com/@keridel" target="_blank">keridel's</a> Team Keychains</span></h5>
