--- a/thin.html
+++ b/thin.html
@@ -96,6 +96,47 @@
                    </div>
                   <hr style="margin:25px;border-color: #555;">
                   <div class="text-left">
+                     <!-- Start Tynamo Community Day -->
+                     <div class="asset-section" data-type="community-day" data-year="2024">
+                        <h5><a class="page-anchor" id="Jul2024CommunityDay" href="#Jul2024CommunityDay">Community Day:</a> <span style="font-family:'texgyreadventorregular';">Tynamo</span></h5>
+                        <p>
+                        Tynamo, the EleFish Pokémon, will be featured during July Community Day on the 21st!  
+                        </p>
+                        <div class="assetGroup">
+                              <div class="asset">
+                              <a href="https://drive.google.com/drive/folders/12QUlMuwVKnN9dLub6ljqcaXMoXhBVKp9?usp=sharing" target="_blank">
+                              <img  alt="" src=".assets/2024/Season13-TimelessTravels/2024-07-21-community-day/badge.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
+                              </div>
+                              <label>Hexagon Badge</label>
+                              </a>
+                              <p>
+                                 Designed to seamlessly fill the void left by the Former Silph Road's asset team.
+                                 <div class="credits">
+                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a>
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="https://drive.google.com/file/d/1AbMCDnYMzqnjyLQQH00AyywnUSHrDbod/view?usp=drive_link" target="_blank">
+                              <img  alt="" src=".assets/2024/Season13-TimelessTravels/2024-07-21-community-day/background.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
+                              </div>
+                              <label>Hexagon Badge with Background</label>
+                              </a>
+                              <p>
+                                 Great for use to make buttons or stickers, plenty of extra background to crop to desired size.
+                                 <div class="credits">
+                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a>
+                                 </div>
+                              </p>
+                           </div> 
+                        </div>
+                        <hr style="margin:25px;border-color: #555;">
+                     </div>
+                     <!-- End Tynamo Community Day -->
                       <!-- Start Go Fest 2024 -->
                      <div class="asset-section" data-type="special-events" data-year="2024">
                         <h5><a class="page-anchor" id="gofest2024" href="#gofest2024">Meetup Event:</a> <span style="font-family:'texgyreadventorregular';">Go Fest 2024</span></h5>
