--- a/thin.html
+++ b/thin.html
@@ -133,6 +133,49 @@
                                  </div>
                               </p>
                            </div> 
+                           <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-07-21-community-day/CDLTynamoBanner.png" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-07-21-community-day/CDLTynamoBanner.png">
+                              <div class="asset-label">
+                                 <img src="./img/png.png" alt="PNG File Label">
+                              </div>
+                              <label>CDL Tynamo Banner</label>
+                              </a>
+                              <p>
+                                 Published by the CDL Team for you to promote your communiy's participation in the Community Day League
+                                 <div class="credits">
+                                    <a href="https://discord.gg/dGPHjdKGZm" target="_blank">Community Day League team</a>
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-07-21-community-day/CDLTynamoBase.png" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-07-21-community-day/CDLTynamoBase.png">
+                              <div class="asset-label">
+                                 <img src="./img/png.png" alt="PNG File Label">
+                              </div>
+                              <label>CDL Tynamo Badge</label>
+                              </a>
+                              <p>
+                                 <div class="credits">
+                                    Badge Design: <a href="https://discord.gg/dGPHjdKGZm" target="_blank">Community Day League team</a>
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-07-21-community-day/CDLTynamoGold.png" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-07-21-community-day/CDLTynamoGold.png">
+                              <div class="asset-label">
+                                 <img src="./img/png.png" alt="PNG File Label">
+                              </div>
+                              <label>CDL Tynamo Gold Badge</label>
+                              </a>
+                              <p>
+                                 <div class="credits">
+                                    Badge Design: <a href="https://discord.gg/dGPHjdKGZm" target="_blank">Community Day League team</a>
+                                 </div>
+                              </p>
+                           </div>
                         </div>
                         <hr style="margin:25px;border-color: #555;">
                      </div>
